# SQLModel-fastapi-sample

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: __init__.py  context.py  db.py  main.py
app/models/: base.py  betting_history.py  user.py
